# chess

./: .gitignore  CMakeLists.txt  README.md  chess.code-workspace
src/: main.cpp
src/game/: TextureManager.cpp  TextureManager.h  field.cpp  field.h  figure.cpp  figure.h  filed.h  game.cpp  game.h  main.cpp  player.cpp  player.h
src/game/menu/: button.cpp  button.h  menu.cpp  menu.h  text.cpp  text.h
src/tools/: movesGenerators.cpp  tools.h  vectorTools.cpp
